--- a/acumos-portal-fe/src/main/webapp/css/angular-datatables.css
+++ b/acumos-portal-fe/src/main/webapp/css/angular-datatables.css
@@ -38,7 +38,8 @@ table.dataTable.no-footer{
 .dataTables_filter input[type="search"] {
     border: 1px solid #E4E4E4;
     border-radius: 3px;
-    margin: 0 0 0 5px;
+    margin: 0 0 10px 5px;
+    padding: 5px;
 }
 /* -- table --*/
 table.dataTable thead th, table.dataTable thead td {
