--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -2573,7 +2573,7 @@ md-select-menu md-content md-option[selected], md-select-menu md-content md-opti
 .pub-req table.admin-tbl1 thead tr th:nth-child(8){min-width:120px;}
 .pub-req table.dataTable tbody td{padding:5px 18px;}
 .pub-req table.admin-tbl1 thead tr th{padding-top:0; padding-bottom:0;}
-.pub-req table.admin-tbl1 thead tr th:last-child {text-align: right; min-width:70px;}
+.pub-req table.admin-tbl1 thead tr th:last-child {text-align: center; min-width:70px;}
 																					 
 
 /*********** MEDIA QUERIES SECTION START************/
