--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -2565,6 +2565,10 @@ md-select-menu md-content md-option[selected], md-select-menu md-content md-opti
 .licensedisplay {background: #fff; padding: 10px 5px 10px 10px;font-family: 'Open Sans', sans-serif;}
 .licensedisplay span { line-height: 1.9em; }
 .licensedisplay span strong { color: #4f147a;font-weight:600; }
+.model-license-profile{position:relative; width:400px;}
+.model-license-profile .link-blue{position: absolute; right: 10px; top: 5px;}
+.model-license-profile .isLicensePresentTextBox{width:100%; cursor:context-menu;}
+.model-license-profile .link-blue:before { content: '|'; margin-right: 5px; color:#666;}
 /* License Profile in human readable format start */
 
 /* Publish request table */
